add quantites support

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,6 +13,7 @@
       </div><!-- panel-heading -->
       <div class="panel-body">
         <div class="input-group">
+          <input type="text" class="form-control" id="item-quantity" placeholder="ποσότητα">
           <input type="text" class="form-control" id="item-input" placeholder="URL προϊόντος">
           <span class="input-group-btn">
             <button class="btn btn-default" id="add-item" type="button">προσθήκη</button>
@@ -32,6 +33,7 @@
           <table class="table table-striped" id="output-table">
             <thead>
               <th>#</th>
+              <th>ποσότητα</th>
               <th>όνομα</th>
             </thead>
               <tbody>
